re PR target/3724 ([ARM]Illegal instruction when profiling optimized code on arm-linux)

PR target/3724
* arm/linux-elf.h (PROFILE_HOOK): Define.

From-SVN: r67950